# browser_agent_demo

./: .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  README.md  coverage_report.txt  pyproject.toml  ralph-prompt.md  ralph.sh
.claude/: CLAUDE.md
.specify/memory/: CLAUDE.md  constitution.md
.specify/scripts/bash/: CLAUDE.md
.specify/templates/: CLAUDE.md
examples/: CLAUDE.md  README.md  interactive_session.py  multi_step_task.py  simple_navigation.py
specs/: CLAUDE.md
specs/001-browser-automation-agent/: CLAUDE.md  spec.md  tasks.md
specs/001-browser-automation-agent/checklists/: CLAUDE.md  requirements.md
specs/002-iframe-interaction-fixes/: CLAUDE.md  tasks.md
specs/003-claude-sdk-integration/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-claude-sdk-integration/checklists/: requirements.md
specs/003-claude-sdk-integration/contracts/: CLAUDE.md  agent-definitions.json  tools.json
src/: CLAUDE.md
src/browser_agent/: CLAUDE.md  cache.py  config.py  main.py  sdk_adapter.py
src/browser_agent/agents/: CLAUDE.md  __init__.py  definitions.py  dom_analyzer.py  executor.py  orchestrator.py  planner.py  reporter.py  task_decomposer.py  validator.py
src/browser_agent/browser/: CLAUDE.md  __init__.py  controller.py  session.py
src/browser_agent/llm/: CLAUDE.md  __init__.py  anthropic_provider.py  factory.py  (+2 more)
tests/: CLAUDE.md  test_integration.py
tests/integration/: CLAUDE.md  test_iframes.py  test_security_integration.py
tests/unit/: CLAUDE.md  test_frame_tools.py  test_security.py
(+22 files in other folders)
