[project]
name = "browser-agent"
version = "0.1.0"
description = "AI-powered browser automation agent with hierarchical agent architecture"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.48.0",
    "anthropic>=0.40.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
